终端信息.txt
(.venv) PS C:\Users\Misaki\Desktop\git\aurora-gallery-tauri> cd src-tauri
>> cargo check
>> 
warning: variable does not need to be mutable
 --> src\bin\dump_persons.rs:7:9
  |
7 |     let mut db_path = if !appdata.is_empty() {
  |         ----^^^^^^^
  |         |
  |         help: remove this `mut`
  |
  = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `updated`
  --> src\bin\dump_persons.rs:37:13
   |
37 |         let updated: Option<i64> = row.get(8).ok();
   |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_updated`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

    Checking aurora-gallery-tauri v0.1.0 (C:\Users\Misaki\Desktop\git\aurora-gallery-tauri\src-tauri)
warning: `aurora-gallery-tauri` (bin "dump_persons") generated 2 warnings (run `cargo fix --bin "dump_persons" -p aurora-gallery-tauri` to apply 2 suggestions)    
error[E0428]: the name `get_dominant_colors` is defined multiple times
    --> src\main.rs:2693:1
     |
1517 | / async fn get_dominant_colors(
1518 | |     file_path: String,
1519 | |     count: usize,
1520 | |     thumbnail_path: Option<String>,
...    |
1586 | |     Ok(colors)
1587 | | }
     | |_- previous definition of the value `get_dominant_colors` here
...
2693 | / async fn get_dominant_colors(
2694 | |     file_path: String,
2695 | |     count: usize,
2696 | |     thumbnail_path: Option<String>,
...    |
2762 | |     Ok(colors)
2763 | | }
     | |_^ `get_dominant_colors` redefined here
     |
     = note: `get_dominant_colors` must be defined only once in the value namespace of this module

error[E0252]: the name `__cmd__get_dominant_colors` is defined multiple times
    --> src\main.rs:2693:10
     |
1517 | async fn get_dominant_colors(
     |          ------------------- previous import of the macro `__cmd__get_dominant_colors` here
...
2693 | async fn get_dominant_colors(
     |          ^^^^^^^^^^^^^^^^^^^ `__cmd__get_dominant_colors` reimported here
     |
     = note: `__cmd__get_dominant_colors` must be defined only once in the macro namespace of this module
help: you can use `as` to change the binding name of the import
     |
2693 | async fn get_dominant_colors as other___cmd__get_dominant_colors(
     |                              +++++++++++++++++++++++++++++++++++

error: cannot find macro `__cmd__greet` in this scope
    --> src\main.rs:2813:13
     |
2813 |             greet,
     |             ^^^^^

error: cannot find macro `__cmd__save_user_data` in this scope
    --> src\main.rs:2818:13
     |
2818 |             save_user_data,
     |             ^^^^^^^^^^^^^^

error: cannot find macro `__cmd__load_user_data` in this scope
    --> src\main.rs:2819:13
     |
2819 |             load_user_data,
     |             ^^^^^^^^^^^^^^

error[E0659]: `__cmd__get_dominant_colors` is ambiguous
    --> src\main.rs:2840:13
     |
2840 |             get_dominant_colors,
     |             ^^^^^^^^^^^^^^^^^^^ ambiguous name
     |
     = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution       
note: `__cmd__get_dominant_colors` could refer to the macro defined here
    --> src\main.rs:2692:1
     |
2692 | #[tauri::command]
     | ^^^^^^^^^^^^^^^^^
note: `__cmd__get_dominant_colors` could also refer to the macro defined here
    --> src\main.rs:1516:1
     |
1516 | #[tauri::command]
     | ^^^^^^^^^^^^^^^^^
     = note: this error originates in the attribute macro `tauri::command` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
    --> src\main.rs:2708:49
     |
2708 |         color_db::get_colors_by_file_path(&mut {conn}, &file_path_for_db)
note: `__cmd__get_dominant_colors` could refer to the macro defined here
    --> src\main.rs:2692:1
     |
2692 | #[tauri::command]
     | ^^^^^^^^^^^^^^^^^
note: `__cmd__get_dominant_colors` could also refer to the macro defined here
    --> src\main.rs:1516:1
     |
1516 | #[tauri::command]
     | ^^^^^^^^^^^^^^^^^
     = note: this error originates in the attribute macro `tauri::command` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
    --> src\main.rs:2708:49
     |
2708 |         color_db::get_colors_by_file_path(&mut {conn}, &file_path_for_db)
     |                                                 ^^^^ expected `Connection`, found `MutexGuard<'_, Connection>`
note: `__cmd__get_dominant_colors` could refer to the macro defined here
    --> src\main.rs:2692:1
     |
2692 | #[tauri::command]
     | ^^^^^^^^^^^^^^^^^
note: `__cmd__get_dominant_colors` could also refer to the macro defined here
    --> src\main.rs:1516:1
     |
1516 | #[tauri::command]
     | ^^^^^^^^^^^^^^^^^
     = note: this error originates in the attribute macro `tauri::command` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
    --> src\main.rs:2708:49
     |
2708 |         color_db::get_colors_by_file_path(&mut {conn}, &file_path_for_db)
note: `__cmd__get_dominant_colors` could refer to the macro defined here
    --> src\main.rs:2692:1
     |
2692 | #[tauri::command]
     | ^^^^^^^^^^^^^^^^^
note: `__cmd__get_dominant_colors` could also refer to the macro defined here
    --> src\main.rs:1516:1
     |
1516 | #[tauri::command]
     | ^^^^^^^^^^^^^^^^^
     = note: this error originates in the attribute macro `tauri::command` (in Nightly builds, run with -Z macro-backtrace for more info)
note: `__cmd__get_dominant_colors` could refer to the macro defined here
    --> src\main.rs:2692:1
     |
2692 | #[tauri::command]
     | ^^^^^^^^^^^^^^^^^
note: `__cmd__get_dominant_colors` could also refer to the macro defined here
    --> src\main.rs:1516:1
     |
note: `__cmd__get_dominant_colors` could refer to the macro defined here
    --> src\main.rs:2692:1
     |
2692 | #[tauri::command]
     | ^^^^^^^^^^^^^^^^^
note: `__cmd__get_dominant_colors` could also refer to the macro defined here
    --> src\main.rs:1516:1
     |
note: `__cmd__get_dominant_colors` could refer to the macro defined here
    --> src\main.rs:2692:1
     |
2692 | #[tauri::command]
     | ^^^^^^^^^^^^^^^^^
note: `__cmd__get_dominant_colors` could refer to the macro defined here
    --> src\main.rs:2692:1
     |
note: `__cmd__get_dominant_colors` could refer to the macro defined here
    --> src\main.rs:2692:1
     |
note: `__cmd__get_dominant_colors` could refer to the macro defined here
    --> src\main.rs:2692:1
     |
note: `__cmd__get_dominant_colors` could refer to the macro defined here
    --> src\main.rs:2692:1
     |
note: `__cmd__get_dominant_colors` could refer to the macro defined here
    --> src\main.rs:2692:1
note: `__cmd__get_dominant_colors` could refer to the macro defined here
    --> src\main.rs:2692:1
     |
2692 | #[tauri::command]
     | ^^^^^^^^^^^^^^^^^
note: `__cmd__get_dominant_colors` could refer to the macro defined here
    --> src\main.rs:2692:1
     |
2692 | #[tauri::command]
     | ^^^^^^^^^^^^^^^^^
note: `__cmd__get_dominant_colors` could refer to the macro defined here
    --> src\main.rs:2692:1
     |
2692 | #[tauri::command]
    --> src\main.rs:2692:1
     |
2692 | #[tauri::command]
     |
2692 | #[tauri::command]
     | ^^^^^^^^^^^^^^^^^
note: `__cmd__get_dominant_colors` could also refer to the macro defined here
     | ^^^^^^^^^^^^^^^^^
note: `__cmd__get_dominant_colors` could also refer to the macro defined here
note: `__cmd__get_dominant_colors` could also refer to the macro defined here
    --> src\main.rs:1516:1
     |
1516 | #[tauri::command]
     | ^^^^^^^^^^^^^^^^^
     = note: this error originates in the attribute macro `tauri::command` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
    --> src\main.rs:2708:49
     |
2708 |         color_db::get_colors_by_file_path(&mut {conn}, &file_path_for_db)
     |                                                 ^^^^ expected `Connection`, found `MutexGuard<'_, Connection>`
     |
     = note: expected struct `Connection`
                found struct `std::sync::MutexGuard<'_, Connection>`

Some errors have detailed explanations: E0252, E0308, E0428, E0659.
For more information about an error, try `rustc --explain E0252`.
error: could not compile `aurora-gallery-tauri` (bin "aurora-gallery-tauri") due to 7 previous errors